去掉个性化编辑  以及修稿图标

--- a/pc/online-web/src/main/webapp/web/css/anchor/curriculum.css
+++ b/pc/online-web/src/main/webapp/web/css/anchor/curriculum.css
@@ -96,7 +96,7 @@ table{
     background-color: #fff;
     float: left;
     margin-top: 20px;
-    padding-bottom: 39px;
+    /*padding-bottom: 39px;*/
 }
 .doctor_inf{
 	text-align: center;
