名医的图片多出一像素并隐藏

--- a/pc/online-web/src/main/webapp/web/css/doctor_details.css
+++ b/pc/online-web/src/main/webapp/web/css/doctor_details.css
@@ -194,6 +194,7 @@
   margin-right: 20px;
   float: left;
   margin-bottom: 20px;
+  overflow: hidden;
 }
 .content_box #main .main_left .class .class_bottom .class_inf .class_inf_pic {
   width: 260px;
