--- a/pc/online-web/src/main/webapp/web/css/doctor_details.css
+++ b/pc/online-web/src/main/webapp/web/css/doctor_details.css
@@ -389,16 +389,21 @@ white-space: nowrap;
   padding: 20px;
 }
 .content_box #main .main_right .about_doctor h3 {
-  margin-bottom: 23px;
+  /*margin-bottom: 23px;*/
   font-size: 16px;
   font-weight: 400;
+}
+.content_box #main .main_right .about_doctor .about_doctor_list{
+	margin-bottom: 0;
 }
 .content_box #main .main_right .about_doctor .about_doctor_list > li {
   width: 60px;
   text-align: center;
   float: left;
   margin-right: 13px;
-  margin-bottom: 20px;
+  margin-top: 20px;
+  overflow: hidden;
+  height: 102px;
 }
 .content_box #main .main_right .about_doctor .about_doctor_list > li .about_doctor_pic {
   display: inline-block;
@@ -406,6 +411,13 @@ white-space: nowrap;
   height: 60px;
   margin-bottom: 10px;
 }
+.content_box #main .main_right .about_doctor .about_doctor_list > li p{
+	max-width: 60px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+    
 .content_box #main .main_right .about_doctor .about_doctor_list > li .about_doctor_pic img {
   width: 60px;
   height: 60px;
