--- a/pc/online-web/src/main/webapp/web/css/forumDetail.css
+++ b/pc/online-web/src/main/webapp/web/css/forumDetail.css
@@ -537,15 +537,32 @@ img {
 #forum .forum-content .forum-content-right .hot-article .hot-article-list li {
     margin-top: 16px;
 }
-
+#forum .forum-content .forum-content-right .hot-article .hot-article-list li p{
+	display: inline-block;
+	padding: 0 5px;
+	font-size: 12px;
+	border: 1px solid #ccc;
+  color: #999;
+  border-radius: 4px;
+  float: left;
+  margin-right: 5px;
+}
+#forum .forum-content .forum-content-right .hot-article .hot-article-list li .setSelect{
+	  background-color: #2cb82c;
+    color: #fff;
+    border-radius: 4px;
+    border: 0;
+}
 #forum .forum-content .forum-content-right .hot-article .hot-article-list li span {
     display: inline-block;
-    width: 280px;
+    width: 240px;
     vertical-align: middle;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
     margin-top: -2px;
+    
+    	display: -webkit-box;
+-webkit-box-orient: vertical;
+-webkit-line-clamp: 2;
+overflow: hidden;
 }
 
 #forum .forum-content .forum-content-right .hot-article .hot-article-list li a {
