--- a/pc/online-web/src/main/webapp/web/css/news.css
+++ b/pc/online-web/src/main/webapp/web/css/news.css
@@ -250,12 +250,32 @@ img {
 }
 #forum .forum-content .forum-content-right .hot-article-list > li > a >span{
 	display: inline-block;
-	height: 19px;
-	line-height: 19px;
 	color: #000;
 	font-size: 14px;
 	color: #666666;
-	width: 280px;
+	width: 240px;
+	
+	display: -webkit-box;
+-webkit-box-orient: vertical;
+-webkit-line-clamp: 2;
+overflow: hidden;
+}
+#forum .forum-content .forum-content-right .hot-article-list > li > a >p{
+	display: inline-block;
+	padding: 0 5px;
+	font-size: 12px;
+	border: 1px solid #ccc;
+  color: #999;
+  border-radius: 4px;
+  float: left;
+  margin-right: 5px;
+}
+#forum .forum-content .forum-content-right .hot-article-list > li > a .setSelect{
+
+	  background-color: #2cb82c;
+    color: #fff;
+    border-radius: 4px;
+    border: 0;
 }
 #forum .forum-content .forum-content-right .zhuanlan_zuozhe{
 	    width: 320px;
@@ -335,6 +355,23 @@ img {
 #forum .forum-banner .hot-article .hot-article-list li {
   margin-top: 18px;
   cursor: pointer;
+}
+#forum .forum-banner .hot-article .hot-article-list li > a > p{
+	display: inline-block;
+	padding: 0 5px;
+	font-size: 12px;
+	border: 1px solid #ccc;
+  color: #999;
+  border-radius: 4px;
+  float: left;
+  margin-right: 5px;
+}
+#forum .forum-banner .hot-article .hot-article-list li > a > .setSelect{
+
+	  background-color: #2cb82c;
+    color: #fff;
+    border-radius: 4px;
+    border: 0;
 }
 #forum .forum-banner .hot-article .hot-article-list li span {
   display: inline-block;
