--- a/pc/online-web/src/main/webapp/web/css/school/pay-pay.css
+++ b/pc/online-web/src/main/webapp/web/css/school/pay-pay.css
@@ -5,7 +5,9 @@ body{
 	background: #F8F8F8;
 	
 }
+a:link{text-decoration:none; } 
 a:hover{text-decoration: none;}
+
 p{margin-bottom: 0;}
 .cl{clear: both;}
 .z{float: left;}
@@ -65,6 +67,9 @@ p{margin-bottom: 0;}
 	color: #666666;
 	line-height: 50px;
 	position: relative;
+	float: left;
+	cursor: pointer;
+	margin-right: 20px;
 }
 .select-pay .pay-logo{
 	width: 30px;
@@ -75,7 +80,77 @@ p{margin-bottom: 0;}
 	width: 30px;
 	height: 30px;
 	display: block;
+	margin: 10px 0 0 18px;
 }
 .select-pay p{
 	text-align: center;
+	float: right;
+	margin-right: 18px;
 }
+.icon-sure {
+	width: 18px;
+	height: 18px;
+	background: url(../../images/video/select18.png) no-repeat;
+	position: absolute;
+	right: 0;
+	bottom: 0;
+
+}
+
+.select-pay .select-confirm{
+	border: 1px solid #F97B49;
+}
+.main-bottom .balance{
+	padding-top: 20px;
+}
+.recharge-box button{
+	padding: 10px;
+	color: white;
+	background: #F97B49;
+	border: 0;
+	outline: none;
+	font-size: 20px;
+	margin-top: 30px;
+	
+}
+.pay-box button{
+	padding: 10px 50px;
+	color: white;
+	background: #F97B49;
+	border: 0;
+	outline: none;
+	font-size: 20px;
+	margin-top: 30px;
+}
+.agreement-box{
+	margin-top: 20px;
+}
+.agreement-box p {
+	display: inline-block;
+}
+.agreement-box p span{
+	display: inline-block;
+    vertical-align: middle;
+    margin-top: -6px;
+    cursor: pointer;
+    margin-left: 5px;
+}
+   
+.agreement-box p em{
+	    display: inline-block;
+    width: 14px;
+    height: 14px;
+    cursor: pointer;
+    background: url(../../images/130/select14_click.png) no-repeat;
+}   
+.agreement-box .agreement-content{
+	vertical-align: middle;
+    margin-top: -7px;
+    display: inline-block;
+    display: -webkit-inline-box;
+
+}
+.agreement-box .agreement-content a{
+	color: #00a7ff;
+}
+    
