--- a/pc/online-web/src/main/webapp/web/css/school/school-under.css
+++ b/pc/online-web/src/main/webapp/web/css/school/school-under.css
@@ -64,6 +64,7 @@ a:hover{text-decoration: none;}
 
 	display: inline-block;
 }
+/*视频开始*/
 .main .content-class .course {
     margin-right: 20px;
     margin-bottom: 23px;
