--- a/pc/online-web/src/main/webapp/web/css/school/pay-recharge.css
+++ b/pc/online-web/src/main/webapp/web/css/school/pay-recharge.css
@@ -92,9 +92,9 @@ p{margin-bottom: 0;}
 	margin-right: 18px;
 }
 .icon-sure {
-	width: 18px;
-	height: 18px;
-	background: url(../../images/video/select18.png) no-repeat;
+	width: 22px;
+	height: 22px;
+	background: url(../../images/sanjiao.png) no-repeat;
 	position: absolute;
 	right: 0;
 	bottom: 0;
