--- a/wechat/src/main/webapp/xcview/css/all_comment.css
+++ b/wechat/src/main/webapp/xcview/css/all_comment.css
@@ -130,6 +130,7 @@ margin-top: 0.1rem;
 }
 .wrap_userName{
 	width: 100%;
+	margin-top: 0.3rem;
 }
 .wrap_userName img{
 	    width: 1.5rem;
@@ -183,11 +184,12 @@ margin-top: 0.1rem;
 .uesr_returned{
 	width: 100%;
 	padding: 0.2rem;
-	background: #F0F0F0;
-	border-radius: 0.04rem;
 	margin-top: 0.2rem;
 	box-sizing: border-box;
 	overflow: hidden;
+	background: #FAFAFA;
+	border: 1px solid #F0F0F0;
+	border-radius: 4px;
 }
 .returned_id{
 color: #666666;
@@ -220,17 +222,15 @@ color: #666666;
 }
 .wrap_purchaser{
 	float:left;
-	width: 0.98rem;
-	height: 0.32rem;
+	width: 0.56rem;
+	height: 0.28rem;
 	text-align: center;
 	line-height: 0.32rem;
-	color: #F97B49;
-	border: 1px solid #F97B49;
-	font-size: 0.25rem;
-	margin-top: 0.1rem;
+	color: #fff;
+	background: #00bc12;
+	font-size: 0.16rem;
+	margin: 0.04rem 0rem 0 0.1rem;
 	border-radius: 4px;
-	   /* position: absolute;
-    top: 1.22rem;*/
 }
 .wrap_purchaser p{
 	font-size: 0.22rem !important;
