--- a/wechat/src/main/webapp/xcview/css/school_play.css
+++ b/wechat/src/main/webapp/xcview/css/school_play.css
@@ -96,25 +96,19 @@ textarea::-webkit-input-placeholder {
 .speak_title{
 	font-size: 0.32rem;
 color: #333333;
-text-align: center;
 padding-bottom: 0.17rem;
 }
 
 .wrap_grade{
-	width: 3.5rem;
 	height: 0.33rem;
-	margin: 0 auto;
-	text-align: center;
 }
 .speak-text{
 	font-size: 0.26rem;
 color: #666666;
-text-align: center;
 padding-bottom: 0.17rem;
 }
 .grade_pic{
 	margin-top: 0.05rem;
-	text-align: center;
 }
 .grade_pic li img{
 	width: 1.6rem;
@@ -131,6 +125,24 @@ padding-bottom: 0.17rem;
     margin-top: 0.05rem;
     margin-left: -0.03rem;
 }
+/*直播头像*/
+.live_image{
+	width: 100%;
+    height: 0.6rem;
+    line-height: 0.6rem;
+    margin-top: 0.4rem;
+    margin-bottom: 0.3rem;
+}
+.live_image img{
+	width: 0.6rem;
+	height: 0.6rem;
+    margin-right: 0.2rem;
+}
+.live_image span{
+	font-size: 0.24rem;
+	color: #666666;
+}
+
 /*主播时间*/
 .wrap_playTime{
 	width: 100%;
@@ -139,12 +151,15 @@ padding-bottom: 0.17rem;
 	padding: 0 0 0 0.26rem;
     box-sizing: border-box;
     overflow: hidden;
+    margin-bottom: 0.2rem;
 }
 .playTime{
 	font-size: 0.26rem;
-	padding: 0.22rem 0;
+	padding: 0.22rem 0 0.22rem 0;
 	width: 100%;
-	border-bottom: 0.01rem solid #D8DDE6;
+}
+.playTimes{
+	padding: 0.4rem 0 0rem 0;
 }
 .playTime img{
 	display: inline-block;
@@ -158,10 +173,8 @@ padding-bottom: 0.17rem;
 	float: left;
 	margin-top: -0.02rem;
 	margin-left: 0.1rem;
-	
-	padding-right: 0.26rem;
+	/*padding-right: 0.26rem;*/
     box-sizing: border-box;
-
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -170,11 +183,12 @@ padding-bottom: 0.17rem;
 	    border: 1px solid #F97B49;
 border-radius: 3px;
     font-size: 0.22rem;
-    padding: 0rem 0.1rem;
+    /*padding: 0rem 0.1rem;*/
     color: #F97B49 !important;
     display: inline-block;
     margin-left: 0.1rem;
     float: left;
+    text-align: center;
 }
 .playTime li:nth-last-child(1){
 	float: right;
@@ -198,12 +212,20 @@ border-radius: 3px;
 .my_synopsis{
 	width: 2.36rem;
 	height: 0.43rem;
-	margin: 0 auto;
+	/*margin: 0 auto;*/
 
 }
 .my_synopsis ul li{
 	float: left;
 	
+}
+.my_synopsis ul .border{
+	width: 0.06rem;
+    height: 0.28rem;
+    background: #00bc12;
+    float: left;
+    margin: 0.05rem 0.12rem 0 0.26rem;
+    border-radius: 100px;
 }
 .my_synopsis ul li p{
 	width: 0.6rem;
@@ -211,9 +233,9 @@ border-radius: 3px;
 	background: #D8DDE6;
 	margin-top: 0.2rem;
 }
-.my_synopsis ul li:nth-child(2){
+/* .my_synopsis ul li:nth-child(2){
 	margin-left: 0.3rem;
-}
+} */
 /*内容*/
 .wrap{
 	width: 100%;
@@ -287,18 +309,26 @@ word-break:break-all;
 }
 .main_speak{
 	width: 2.64rem;
-	margin: 0 auto;
+	/*margin: 0 auto;*/
 	overflow: hidden;
 	padding-top: 0.2rem;
 }
-.main_speak p:nth-child(1){
-	float: left;
+.wrap_speak .main_speak .border{
+	width: 0.06rem;
+    height: 0.28rem;
+    background: #00bc12;
+    float: left;
+    margin: 0.05rem 0.12rem 0 0.26rem;
+    border-radius: 100px;
+}
+.main_speak .main_speak .size{
+	/* float: left;
 	width: 0.6rem;
 	height: 1px;
-	background: #D8DDE6;
+	background: #D8DDE6; */
 	margin-top: 0.2rem;
 }
-.main_speak p:nth-child(2){
+/*.main_speak p:nth-child(2){
 	float: left;
 	margin-left: 0.3rem;
 }
@@ -308,7 +338,7 @@ word-break:break-all;
 	height: 1px;
 	background: #D8DDE6;
 	margin-top: 0.2rem;
-}
+}*/
 /*内容*/
 .wrap1{
 	width: 100%;
@@ -381,6 +411,14 @@ word-break:break-all;
 	font-size: 0.32rem;
 
 }
+.wrap_comment_title .border{
+	width: 0.06rem;
+    height: 0.28rem;
+    background: #00bc12;
+    float: left;
+    margin: 0.05rem 0.12rem 0 0rem;
+    border-radius: 100px;
+}
 .wrap_comment_title span{
 	float: right;
 margin-top: 0.1rem;
@@ -416,6 +454,7 @@ margin-top: 0.1rem;
 	background: skyblue;
 	float: left;
 	border-radius: 50%;
+	margin-bottom: 0.2rem;
 }
 .user_header img{
 	width: 100%;
@@ -430,15 +469,16 @@ margin-top: 0.1rem;
 }
 .wrap_userName{
 	width: 100%;
+	margin-top: 0.3rem;
 }
 .wrap_userName img{
 	    width: 1.5rem;
     margin-top: 0.08rem;
-    margin-left: 0.15rem;
+    margin-left: 0.2rem;
 }
 .write_text{
 	font-size: 0.26rem;
-	padding-top: 0.16rem;
+	/*padding-top: 0.16rem;*/
 word-wrap:break-word;
 	clear: both;
 	
@@ -478,8 +518,8 @@ word-wrap:break-word;
 }
 .uesr_lable ul li{
 	padding: 0.08rem 0.2rem;
-	background: #00BC12;
-border-radius: 8px;
+	background: #f0f0f0;
+border-radius: 100px;
 color: white;
 margin-right: 0.2rem;
 font-size: 0.28rem;
@@ -490,11 +530,12 @@ margin-top: 0.1rem;
 .uesr_returned{
 	width: 100%;
 	padding: 0.2rem;
-	background: #F0F0F0;
-	border-radius: 0.04rem;
 	margin-top: 0.2rem;
 	box-sizing: border-box;
 	overflow: hidden;
+	background: #FAFAFA;
+	border: 1px solid #F0F0F0;
+	border-radius: 4px;
 }
 .returned_id{
 color: #666666;
@@ -528,14 +569,14 @@ color: #666666;
 }
 .wrap_purchaser{
 	float:left;
-	width: 0.98rem;
-	height: 0.32rem;
+	width: 0.56rem;
+	height: 0.28rem;
 	text-align: center;
 	line-height: 0.32rem;
-	color: #F97B49;
-	border: 0.01rem solid #F97B49;
-	font-size: 0.25rem;
-	margin-top: 0.1rem;
+	color: #fff;
+	background: #00bc12;
+	font-size: 0.16rem;
+	margin: 0.04rem 0rem 0 0.1rem;
 	border-radius: 4px;
 }
 .wrap_purchaser p{
