--- a/wechat/src/main/webapp/xcview/css/all_comment.css
+++ b/wechat/src/main/webapp/xcview/css/all_comment.css
@@ -172,13 +172,14 @@ margin-top: 0.1rem;
 }
 .uesr_lable ul li{
 	padding: 0.08rem 0.2rem;
-	background: #00BC12;
-border-radius: 8px;
+	background: #f0f0f0;
+border-radius: 100px;
 color: white;
 margin-right: 0.2rem;
 font-size: 0.28rem;
 float: left;
 margin-top: 0.1rem;
+color: #666;
 }
 /*被恢复的内容-灰色部分*/
 .uesr_returned{
