--- a/wechat/src/main/webapp/xcview/css/live_paly.css
+++ b/wechat/src/main/webapp/xcview/css/live_paly.css
@@ -459,6 +459,7 @@ margin-top: 0.1rem;
 }
 .wrap_userName{
 	width: 100%;
+	margin-top: 0.3rem;
 }
 .wrap_userName img{
 	    width: 1.5rem;
@@ -479,23 +480,25 @@ margin-top: 0.1rem;
 }
 .uesr_lable ul li{
 	padding: 0.08rem 0.2rem;
-	background: #00BC12;
-border-radius: 8px;
-color: white;
-margin-right: 0.2rem;
-font-size: 0.28rem;
-float: left;
-margin-top: 0.1rem;
+	background: #f0f0f0;
+	border-radius: 100px;
+	color: white;
+	margin-right: 0.2rem;
+	font-size: 0.28rem;
+	float: left;
+	margin-top: 0.1rem;
+	color: #666;
 }
 /*被恢复的内容-灰色部分*/
 .uesr_returned{
 	width: 100%;
 	padding: 0.2rem;
-	background: #F0F0F0;
-	border-radius: 0.04rem;
 	margin-top: 0.2rem;
 	box-sizing: border-box;
 	overflow: hidden;
+	background: #FAFAFA;
+	border: 1px solid #F0F0F0;
+	border-radius: 4px;
 }
 
 .returned_id{
