--- a/wechat/src/main/webapp/xcview/css/live_album.css
+++ b/wechat/src/main/webapp/xcview/css/live_album.css
@@ -74,6 +74,10 @@ textarea::-webkit-input-placeholder {
 	height: 100%;
 	display: block;
 }
+.play_video_fiexd{
+	position: fixed;
+	z-index: 1;
+}
 .play_video{
 	width: 100%;
 	height: 4.24rem;
@@ -82,6 +86,11 @@ textarea::-webkit-input-placeholder {
 .play_video img{
 	width: 100%;
 	height: 100%;
+}
+.hide_height{
+	width: 100%;
+	height: 4.24rem;
+	opacity: 0;
 }
 .video_prompt{
 	width: 1.76rem;
