--- a/wechat/src/main/webapp/xcview/css/live_select_aibum.css
+++ b/wechat/src/main/webapp/xcview/css/live_select_aibum.css
@@ -74,6 +74,15 @@ textarea::-webkit-input-placeholder {
 	height: 100%;
 	display: block;
 }
+.play_video_fiexd{
+	position: fixed;
+	z-index: 1;
+} 
+.hide_height{
+	width: 100%;
+	height: 4.24rem;
+	opacity: 0;
+}
 .play_video{
 	width: 100%;
 	height: 4.24rem;
