--- a/pc/online-web/src/main/webapp/web/css/school/details-album.css
+++ b/pc/online-web/src/main/webapp/web/css/school/details-album.css
@@ -422,6 +422,8 @@ word-break:break-all;
 }
 .wrap-recommend h3{
 	margin-bottom: 0;
+    margin-top:0;
+    font-size: 16px;
 }
 /*视频样式*/
 .wrap-recommend .course {
@@ -527,6 +529,10 @@ word-break:break-all;
 }
 .wrap-recommend > div > a .detail .info > span:nth-child(2) {
     float: right;
+}
+.wrap-recommend .stuCount .studentCou{
+	float: right;
+	margin-top: 1px;
 }
 /*视频样式结束*/
 
