--- a/pc/online-web/src/main/webapp/web/css/school/details-under.css
+++ b/pc/online-web/src/main/webapp/web/css/school/details-under.css
@@ -501,6 +501,10 @@ word-break:break-all;
 .wrap-recommend > div > a .detail .info > span:nth-child(2) {
     float: right;
 }
+.wrap-recommend .stuCount .studentCou{
+	float: right;
+	margin-top: 1px;
+}
 /*视频样式结束*/
 
 
