--- a/pc/online-web/src/main/webapp/web/css/school/details-video.css
+++ b/pc/online-web/src/main/webapp/web/css/school/details-video.css
@@ -370,6 +370,8 @@ word-break:break-all;
 }
 .wrap-recommend h3{
 	margin-bottom: 0;
+	font-size: 16px;
+	margin-top: 0;
 }
 /*视频样式*/
 .wrap-recommend .course {
