--- a/wechat/src/main/webapp/xcview/css/live_album.css
+++ b/wechat/src/main/webapp/xcview/css/live_album.css
@@ -491,13 +491,14 @@ textarea::-webkit-input-placeholder {
 }
 /*被恢复的内容-灰色部分*/
 .uesr_returned{
-	box-sizing: border-box;
-	width: 100%;
-	padding: 0.2rem;
-	background: #F0F0F0;
-	border-radius: 0.04rem;
-	margin-top: 0.2rem;
-	overflow: hidden;
+	    width: 100%;
+    padding: 0.2rem;
+    margin-top: 0.2rem;
+    box-sizing: border-box;
+    overflow: hidden;
+    background: #FAFAFA;
+    border: 1px solid #F0F0F0;
+    border-radius: 4px;
 }
 .returned_id{
 	color: #666666;
