--- a/wechat/src/main/webapp/xcview/css/live_personal.css
+++ b/wechat/src/main/webapp/xcview/css/live_personal.css
@@ -123,6 +123,45 @@ textarea::-webkit-input-placeholder {
 	margin: 0 auto;
 	padding-bottom: 0.4rem;
 }
+/*固定头部tab开始*/
+.anchor_navigation{
+	width: 100%;
+	height: 0.8rem;
+	line-height: 0.8rem;
+	background: #fff;
+    border-bottom: 1px solid #F0F0F0;
+}
+.anchor_navigation ul{
+	position: relative;
+	height: 0.8rem;
+}
+.anchor_navigation ul .li{
+	width: 0.56rem;
+	height: 0.8rem;
+	line-height: 0.8rem;
+	font-size: 0.28rem;
+	color: #666666;
+	float: left;
+	margin: 0 0.9rem;
+}
+.anchor_navigation ul .li_course{
+	margin: 0 1.11rem;
+}
+.li_color{
+	color: #00bc12 !important;
+}
+.anchor_navigation .border{
+	position: absolute;
+	bottom: 0;
+	left: 0.9rem;
+	width: 0.52rem;
+	height: 0.04rem;
+	background: #00bc12;
+	border-radius: 100px;
+}
+/*固定头部tab结束*/
+
+
 /*<!--主播名字/粉丝数量-->*/
 .personal_name{
 	text-align: center;
@@ -191,7 +230,6 @@ textarea::-webkit-input-placeholder {
 	padding: 0.3rem 0.26rem;
 	box-sizing: border-box;
 	background: white;
-	margin-top: 0.2rem;
 	overflow: hidden;
 }
 .personal_status .title{
@@ -204,6 +242,7 @@ textarea::-webkit-input-placeholder {
 	background: #00bc12;
 	float: left;
 	margin-right: 0.08rem;
+    margin-top: 0.05rem;
 }
 .title_size{
 	font-size: 0.28rem;
@@ -247,11 +286,19 @@ color: #999999;
 .wrap_vedio{
 	width: 100%;
 	padding: 0.3rem 0.26rem;
-	margin-top: 0.2rem;
 	box-sizing: border-box;
-	margin-top: 0.2rem;
 	background: white;
 	overflow: hidden;
+}
+.wrap_vedio .border{
+	display: inline-block;
+	width: 0.06rem;
+    height: 0.28rem;
+    border-radius: 100px;
+    background: #00bc12;
+    float: left;
+    margin-right: 0.08rem;
+    margin-top: 0.05rem;
 }
 .hide{
 	display: none;
@@ -402,16 +449,25 @@ overflow: hidden;
     margin-top: 0.2rem;
     padding: 0.3rem 0 0.1rem 0.26rem;
 	box-sizing: border-box;
-    
+}
+.wrap_comment_title .border{
+	display: inline-block;
+	width: 0.06rem;
+    height: 0.28rem;
+    border-radius: 100px;
+    background: #00bc12;
+    float: left;
+    margin-right: 0.08rem;
+    margin-top: 0.05rem;
 }
 .wrap_comment_title p{
 	float: left;
-	font-size: 0.32rem;
+	font-size: 0.28rem;
 
 }
 .wrap_comment_title span{
 	float: right;
-margin-top: 0.1rem;
+	margin-top: 0.1rem;
     margin-right: 0.26rem;
 
 }
