线下班ui调整。学习--评价头像间距调整

--- a/wechat/src/main/webapp/xcview/css/school_class.css
+++ b/wechat/src/main/webapp/xcview/css/school_class.css
@@ -10,6 +10,7 @@ outline:none;
 }
 p{font-size: 0.28rem;}
 img{display: block;}
+.both{clear: both;}
 .wp{width: 7.5rem;margin: 0 auto;position: relative;}
 :-moz-placeholder { 
     color: #888888;  
@@ -107,20 +108,15 @@ margin-top: -0.28rem;
 .speak_title{
 	font-size: 0.32rem;
 color: #333333;
-text-align: center;
 padding-bottom: 0.17rem;
 }
 
 .wrap_grade{
-	width: 3.5rem;
 	height: 0.33rem;
-	margin: 0 auto;
-	text-align: center;
 }
 .speak-text{
 	font-size: 0.26rem;
 color: #666666;
-text-align: center;
 padding-bottom: 0.17rem;
 }
 .grade_pic{
@@ -145,7 +141,7 @@ padding-bottom: 0.17rem;
 .wrap_playTime{
 	width: 100%;
 	background: white;
-	margin-top: 0.2rem;
+	margin: 0.2rem 0;
 	padding: 0 0 0 0.26rem;
     box-sizing: border-box;
     overflow: hidden;
@@ -167,16 +163,14 @@ padding-bottom: 0.17rem;
 }
 .playTime li span{
 	float: left;
-	margin-top: -0.02rem;
-	margin-left: 0.1rem;
-
+    margin-top: -0.02rem;
+    margin-left: 0.1rem;
     padding-right: 0.26rem;
     box-sizing: border-box;
-    width: 6.4rem;
+    /* width: 6.4rem; */
     overflow: hidden;
-    /*white-space: nowrap;*/
+    white-space: nowrap;
     text-overflow: ellipsis;
-    word-wrap:break-word;
 }
 
 .playTime li:nth-last-child(1){
@@ -199,10 +193,7 @@ padding-bottom: 0.17rem;
 	padding-top: 0.2rem;
 }
 .my_synopsis{
-	width: 2.36rem;
 	height: 0.43rem;
-	margin: 0 auto;
-
 }
 .my_synopsis ul li{
 	float: left;
@@ -214,8 +205,13 @@ padding-bottom: 0.17rem;
 	background: #D8DDE6;
 	margin-top: 0.2rem;
 }
-.my_synopsis ul li:nth-child(2){
-	margin-left: 0.3rem;
+.my_synopsis ul .border{
+	width: 0.06rem;
+    height: 0.28rem;
+    background: #00bc12;
+    float: left;
+    margin: 0.05rem 0.12rem 0 0.26rem;
+    border-radius: 100px;
 }
 /*内容*/
 .wrap{
@@ -289,28 +285,15 @@ word-break:break-all;
 	overflow: hidden;
 }
 .main_speak{
-	width: 2.64rem;
-	margin: 0 auto;
-	overflow: hidden;
 	padding-top: 0.2rem;
 }
-.main_speak p:nth-child(1){
-	float: left;
-	width: 0.6rem;
-	height: 1px;
-	background: #D8DDE6;
-	margin-top: 0.2rem;
-}
-.main_speak p:nth-child(2){
-	float: left;
-margin-left: 0.3rem;
-}
-.main_speak p:nth-child(3){
-	float: right;
-	width: 0.6rem;
-	height: 1px;
-	background: #D8DDE6;
-	margin-top: 0.2rem;
+.wrap_speak .main_speak .border{
+	width: 0.06rem;
+    height: 0.28rem;
+    background: #00bc12;
+    float: left;
+    margin: 0.05rem 0.12rem 0 0.26rem;
+    border-radius: 100px;
 }
 /*内容*/
 .wrap1{
@@ -394,14 +377,7 @@ text-align: center;
 color: white;
 }
 
-
-
-
-
-
-
 /*评论*/
-
 
 .wrap_comment_title{
 	width: 100%;
@@ -409,32 +385,36 @@ color: white;
 	    overflow: hidden;
     margin-top: 0.2rem;
     padding: 0.3rem 0 0.1rem 0.26rem;
-	box-sizing: border-box;
-    
+	box-sizing: border-box;    
+}
+.wrap_comment_title .border{
+	width: 0.06rem;
+    height: 0.28rem;
+    background: #00bc12;
+    float: left;
+    margin: 0.05rem 0.12rem 0 0rem;
+    border-radius: 100px;
+    margin-top: 0.09rem;
 }
 .wrap_comment_title p{
 	float: left;
 	font-size: 0.32rem;
-
 }
 .wrap_comment_title span{
 	float: right;
-margin-top: 0.1rem;
+	margin-top: 0.1rem;
     margin-right: 0.26rem;
-
 }
 .wrap_comment_title span img{
-
 	width: 0.15rem;
 	height: 0.25rem;
-
 }
 .wrap_people_comment{
 	width: 100%;
 	background: white;
 	overflow: hidden;
-	    border-bottom: 0.01rem solid #D8DDE6;
-	    padding-top: 0.2rem;
+    border-bottom: 0.01rem solid #D8DDE6;
+    padding-top: 0.2rem;
 }
 .wrap_all_returned .wrap_people_comment:nth-last-child(1){
 	border: 0;
@@ -465,6 +445,7 @@ margin-top: 0.1rem;
 }
 .wrap_userName{
 	width: 100%;
+    margin-top: 0.3rem;
 }
 .wrap_userName img{
 	    width: 1.5rem;
@@ -513,23 +494,25 @@ margin-top: 0.1rem;
 }
 .uesr_lable ul li{
 	padding: 0.08rem 0.2rem;
-	background: #00BC12;
-border-radius: 8px;
-color: white;
-margin-right: 0.2rem;
-font-size: 0.28rem;
-float: left;
-margin-top: 0.1rem;
+    background: #f0f0f0;
+    border-radius: 100px;
+    color: white;
+    margin-right: 0.2rem;
+    font-size: 0.24rem;
+    float: left;
+    margin-top: 0.2rem;
+    color: #666;
 }
 /*被恢复的内容-灰色部分*/
 .uesr_returned{
 	width: 100%;
-	padding: 0.2rem;
-	background: #F0F0F0;
-	border-radius: 0.04rem;
-	margin-top: 0.2rem;
-	box-sizing: border-box;
-	overflow: hidden;
+    padding: 0.2rem;
+    margin-top: 0.2rem;
+    box-sizing: border-box;
+    overflow: hidden;
+    background: #FAFAFA;
+    border: 1px solid #F0F0F0;
+    border-radius: 4px;
 }
 .returned_id{
 color: #666666;
@@ -562,16 +545,16 @@ color: #666666;
 	float: left;
 }
 .wrap_purchaser{
-	float:left;
-	width: 0.98rem;
-	height: 0.32rem;
-	text-align: center;
-	line-height: 0.32rem;
-	color: #F97B49;
-	border: 0.01rem solid #F97B49;
-	font-size: 0.25rem;
-	margin-top: 0.1rem;
-	border-radius: 4px;
+	float: left;
+    width: 0.56rem;
+    height: 0.28rem;
+    text-align: center;
+    line-height: 0.32rem;
+    color: #fff;
+    background: #00bc12;
+    font-size: 0.16rem;
+    margin: 0.04rem 0rem 0 0.1rem;
+    border-radius: 4px;
 }
 .wrap_purchaser p{
 	font-size: 0.22rem !important;
