--- a/wechat/src/main/webapp/xcview/css/live_class.css
+++ b/wechat/src/main/webapp/xcview/css/live_class.css
@@ -14,7 +14,9 @@ img{display: block;}
 :-moz-placeholder { 
     color: #888888;  
 }
-
+.both{
+	clear: both;
+}
 ::-moz-placeholder { 
     color: #888888;
 }
@@ -109,20 +111,15 @@ margin-top: -0.28rem;
 .speak_title{
 	font-size: 0.32rem;
 color: #333333;
-text-align: center;
 padding-bottom: 0.17rem;
 }
 
 .wrap_grade{
-	width: 3.5rem;
 	height: 0.33rem;
-	margin: 0 auto;
-	text-align: center;
 }
 .speak-text{
 	font-size: 0.26rem;
 color: #666666;
-text-align: center;
 padding-bottom: 0.17rem;
 }
 .grade_pic{
@@ -148,7 +145,7 @@ padding-bottom: 0.17rem;
 .wrap_playTime{
 	width: 100%;
 	background: white;
-	margin-top: 0.2rem;
+	margin: 0.2rem 0;
 	padding: 0 0 0 0.26rem;
     box-sizing: border-box;
     overflow: hidden;
@@ -170,14 +167,8 @@ padding-bottom: 0.17rem;
 }
 .playTime li span{
 	float: left;
-	margin-top: -0.02rem;
-	margin-left: 0.1rem;
-	    width: 6.2rem;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    /*white-space: nowrap;*/
-    padding-right: 0.26rem;
-    box-sizing: border-box;
+    margin-top: -0.02rem;
+    margin-left: 0.1rem;
 }
 
 .playTime li:nth-last-child(1){
@@ -200,14 +191,10 @@ padding-bottom: 0.17rem;
 	padding-top: 0.2rem;
 }
 .my_synopsis{
-	width: 2.36rem;
 	height: 0.43rem;
-	margin: 0 auto;
-
 }
 .my_synopsis ul li{
 	float: left;
-	
 }
 .my_synopsis ul li p{
 	width: 0.6rem;
@@ -215,8 +202,13 @@ padding-bottom: 0.17rem;
 	background: #D8DDE6;
 	margin-top: 0.2rem;
 }
-.my_synopsis ul li:nth-child(2){
-	margin-left: 0.3rem;
+.my_synopsis ul .border{
+	width: 0.06rem;
+    height: 0.28rem;
+    background: #00bc12;
+    float: left;
+    margin: 0.05rem 0.12rem 0 0.26rem;
+    border-radius: 100px;
 }
 /*内容*/
 .wrap{
@@ -291,28 +283,15 @@ word-break:break-all;
 	overflow: hidden;
 }
 .main_speak{
-	width: 2.64rem;
-	margin: 0 auto;
-	overflow: hidden;
 	padding-top: 0.2rem;
 }
-.main_speak p:nth-child(1){
-	float: left;
-	width: 0.6rem;
-	height: 1px;
-	background: #D8DDE6;
-	margin-top: 0.2rem;
-}
-.main_speak p:nth-child(2){
-	float: left;
-	margin-left: 0.3rem;
-}
-.main_speak p:nth-child(3){
-	float: right;
-	width: 0.6rem;
-	height: 1px;
-	background: #D8DDE6;
-	margin-top: 0.2rem;
+.wrap_speak .main_speak .border{
+	width: 0.06rem;
+    height: 0.28rem;
+    background: #00bc12;
+    float: left;
+    margin: 0.05rem 0.12rem 0 0.26rem;
+    border-radius: 100px;
 }
 /*内容*/
 .wrap1{
@@ -397,40 +376,37 @@ text-align: center;
 color: white;
 }
 
-
-
-
-
-
-
 /*评论*/
-
-
 .wrap_comment_title{
 	width: 100%;
 	background: white;
 	    overflow: hidden;
     margin-top: 0.2rem;
     padding: 0.3rem 0 0.1rem 0.26rem;
-	box-sizing: border-box;
-    
+	box-sizing: border-box;    
+}
+.wrap_comment_title .border{
+	width: 0.06rem;
+    height: 0.28rem;
+    background: #00bc12;
+    float: left;
+    margin: 0.05rem 0.12rem 0 0rem;
+    border-radius: 100px;
+    margin-top: 0.09rem;
 }
 .wrap_comment_title p{
 	float: left;
 	font-size: 0.32rem;
-
 }
 .wrap_comment_title span{
 	float: right;
 margin-top: 0.1rem;
     margin-right: 0.26rem;
-
 }
 .wrap_comment_title span img{
 
 	width: 0.15rem;
 	height: 0.25rem;
-
 }
 .wrap_people_comment{
 	width: 100%;
@@ -471,6 +447,7 @@ margin-top: 0.1rem;
 }
 .wrap_userName{
 	width: 100%;
+	margin-top: 0.3rem;
 }
 .wrap_userName img{
 	    width: 1.5rem;
@@ -482,7 +459,6 @@ margin-top: 0.1rem;
 	padding-top: 0.16rem;
     word-wrap: break-word;
 	clear: both;
-	
 }
 /*很赞/干货很多*/
 .uesr_lable{
@@ -491,26 +467,28 @@ margin-top: 0.1rem;
 }
 .uesr_lable ul li{
 	padding: 0.08rem 0.2rem;
-	background: #00BC12;
-border-radius: 8px;
-color: white;
-margin-right: 0.2rem;
-font-size: 0.28rem;
-float: left;
-margin-top: 0.1rem;
+    background: #f0f0f0;
+    border-radius: 100px;
+    color: white;
+    margin-right: 0.2rem;
+    font-size: 0.24rem;
+    float: left;
+    margin-top: 0.2rem;
+    color: #666;
 }
 /*被恢复的内容-灰色部分*/
 .uesr_returned{
 	width: 100%;
-	padding: 0.2rem;
-	background: #F0F0F0;
-	border-radius: 0.04rem;
-	margin-top: 0.2rem;
-	box-sizing: border-box;
-	overflow: hidden;
+    padding: 0.2rem;
+    margin-top: 0.2rem;
+    box-sizing: border-box;
+    overflow: hidden;
+    background: #FAFAFA;
+    border: 1px solid #F0F0F0;
+    border-radius: 4px;
 }
 .returned_id{
-color: #666666;
+	color: #666666;
     padding-bottom: 0.1rem;
 }
 .returned_text{
@@ -540,16 +518,16 @@ color: #666666;
 	float: left;
 }
 .wrap_purchaser{
-	float:left;
-	width: 0.98rem;
-	height: 0.32rem;
-	text-align: center;
-	line-height: 0.32rem;
-	color: #F97B49;
-	border: 0.01rem solid #F97B49;
-	font-size: 0.25rem;
-	margin-top: 0.1rem;
-	border-radius: 4px;
+	float: left;
+    width: 0.56rem;
+    height: 0.28rem;
+    text-align: center;
+    line-height: 0.32rem;
+    color: #fff;
+    background: #00bc12;
+    font-size: 0.16rem;
+    margin: 0.04rem 0rem 0 0.1rem;
+    border-radius: 4px;
 }
 .wrap_purchaser p{
 	font-size: 0.22rem !important;
@@ -585,7 +563,7 @@ color: #666666;
 	box-sizing: border-box;
 }
 .wrap_input{
-	width: 5.7rem;
+	width: 7rem;
 	height: 0.6rem;
 	background: #f0f0f0;
 	margin-top: 0.2rem;
