--- a/wechat/src/main/webapp/xcview/css/live_audio.css
+++ b/wechat/src/main/webapp/xcview/css/live_audio.css
@@ -73,6 +73,15 @@ textarea::-webkit-input-placeholder {
 	height: 100%;
 	display: block;
 }
+.play_video_fixed{
+	position: fixed;
+	z-index: 1;
+}
+.play_video_opcity{
+	width: 100%;
+	height: 4.24rem;
+	opacity: 0;
+}
 .play_video{
 	width: 100%;
 	height: 4.24rem;
