提交pc线下课、直播课、听课页面静态化

--- a/pc/online-web/src/main/webapp/web/css/school/school-recommend.css
+++ b/pc/online-web/src/main/webapp/web/css/school/school-recommend.css
@@ -27,7 +27,7 @@ a:hover{text-decoration: none;}
 {
 	display: block;
 	width: 860px;
-	height: 346px;
+	height: 346px !important;
 }
 .physic-type{
 	width: 100%;
