--- a/pc/online-web/src/main/webapp/web/css/news.css
+++ b/pc/online-web/src/main/webapp/web/css/news.css
@@ -315,6 +315,10 @@ overflow: hidden;
 	width: 60px;
 	height: 60px;
 }
+#forum .forum-content .forum-content-right .zhuanlan_zuozhe #zhuanlan_zuozhe > li > .touxiang a{
+	width: 60px;
+	height: 60px;
+}
 #forum .forum-content .forum-content-right .zhuanlan_zuozhe #zhuanlan_zuozhe > li > .touxiang img{
 	width: 100%;
 	height: 100%;
