--- a/wechat/src/main/webapp/xcview/css/live_select_aibum.css
+++ b/wechat/src/main/webapp/xcview/css/live_select_aibum.css
@@ -77,13 +77,14 @@ textarea::-webkit-input-placeholder {
 	display: block;
 }
 .play_video_fiexd{
-	position: fixed;
-	z-index: 1;
+	/* position: fixed;
+	z-index: 1; */
 } 
 .hide_height{
 	width: 100%;
 	height: 4.24rem;
 	opacity: 0;
+	display: none;
 }
 .play_video{
 	width: 100%;
