--- a/wechat/src/main/webapp/xcview/css/live_personal.css
+++ b/wechat/src/main/webapp/xcview/css/live_personal.css
@@ -234,6 +234,9 @@ textarea::-webkit-input-placeholder {
 .ccH5playerBox{
 	width: 100% !important;
 }
+.li_course_hide{
+	background: #fff;
+}
 .personal_status{
 	width: 100%;
 	padding: 0.3rem 0.26rem;
@@ -355,6 +358,34 @@ color: #999999;
 	    /*overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;*/
+}
+
+/*无课程*/
+.quie_pics{
+	width: 100%;
+    /*height: 4rem;*/
+    text-align: center;
+    display: none;
+    background: white;
+    padding-bottom: 0.5rem;
+    padding-top: 1.5rem;
+}    
+.quie_pics img{
+	width: 2.5rem;
+	display: inline-block;
+}
+.quie_pics p{
+	color: #BBBBBB;
+	font-size: 0.3rem;
+    padding: 0.2rem 0;
+
+}
+.quie_pics span{
+	display: inline-block;
+	padding: 0.08rem 0.3rem;
+	border: 1px solid #00BC12;
+    color: #00BC12;
+    border-radius: 0.12rem;
 }
 /*课程*/
 .more_right{
